[project]
name = "sparse-autoencoder"
version = "0.1.0"
description = "Reproduction of Sparse Autoencoder (SAE) for mechanistic interpretability"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "lightning>=2.5.0",
    "sae-lens>=6.0.0",
    "transformer-lens>=2.0.0",
    "datasets>=3.0.0",
    "wandb>=0.18.0",
    "rich>=13.0.0",
    "numpy<2.0,>=1.24",
    "einops>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "ipython>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
